--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@ window.onload = function(){disableSelection(document.body);};
 </div>
 </div>
 </div>
+<div>
+<a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);">Private Valuation</span></a>
+</div>
 </header>
 <div class="x-container max width main">
 <div class="offset cf">
