--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ window.onload = function(){disableSelection(document.body);};
 </div>
 </div>
 <div>
-<a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);">Private Valuation</span></a>
+<a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);">Thinking Ahead</span></a>
 </div>
 </header>
 <div class="x-container max width main">
