--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <script>
-	   window.location.href='/thinking-ahead'
+	   window.location.href='TOF-Articles/thinking-ahead'
     </script>
 </head>
 </html>
