--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-    <script>
+    <!-- <script>
 	   window.location.href='TOF-Articles/thinking-ahead'
-    </script>
+    </script> -->
 	</head>
 
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Article</th>
+      <th scope="col">Articles</th>
       <!-- <th scope="col">Visit on</th> -->
     </tr>
   </thead>
@@ -16,8 +16,6 @@
     <tr>
       <th scope="row">Private Valuation <a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);">Private Valuation</span></a></th>
       <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
     </tr>
     <!-- <tr>
       <th scope="row">2</th>
