--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row">Private Valuation <a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);">Private Valuation</span></a></th>
-      <td>Mark</td>
+      <th scope="row"><a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);">Private Valuation</span></a></th>
     </tr>
-    <!-- <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr> -->
+    <tr>
+      <th scope="row"><a href="https://theotherfruit.com/thinking-ahead/"><span style="color:rgba(1, 169, 134, 0.75);">Thinking Ahead</span></a></th>
+    </tr>
   </tbody>
 </table>
 </html>
