--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <!-- <script>
 	   window.location.href='TOF-Articles/thinking-ahead'
     </script> -->
-	</head>
+
+  <title>« Articles » The Other Fruit®</title>
+
+</head>
 
 <table class="table table-striped">
   <thead>
