--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col"><h1>Articles</h1></th>
+      <th scope="col"><h1 Articles</h1></th>
       <!-- <th scope="col">Visit on</th> -->
     </tr>
   </thead>
