--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>« Articles » The Other Fruit®</title>
 
 </head>
+<body>
 
 <table class="table table-striped">
   <thead>
@@ -23,5 +24,6 @@
       <th scope="row"><a href="https://theotherfruit.com/thinking-ahead/"><span style="color:rgba(1, 169, 134, 0.75);">Thinking Ahead</span></a></th>
     </tr>
   </tbody>
+</body>
 </table>
 </html>
