--- a/index.html
+++ b/index.html
@@ -7,23 +7,20 @@
   <title>« Articles » The Other Fruit®</title>
 
 </head>
-<body>
-
 <table class="table table-striped">
   <thead>
-    <tr><center>
-      <th scope="col"><span style="color:rgba(10, 182, 235, 0.75);"><h1>Articles</h1></span></th>
+    <tr>
+      <th scope="col"><span style="color:rgba(10, 182, 235, 0.75);"><h1 style="text-align:center;">Articles</h1></span></th>
       <!-- <th scope="col">Visit on</th> -->
-    </center></tr>
+    </tr>
   </thead>
   <tbody>
     <tr>
-      <th scope="row"><a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(10, 182, 235, 0.75);"><h2>Private Valuation</h2></span></a></th>
+      <th scope="row"><a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);"><h2>Private Valuation</h2></span></a></th>
     </tr>
     <tr>
       <th scope="row"><a href="https://theotherfruit.com/thinking-ahead/"><span style="color:rgba(1, 169, 134, 0.75);">Thinking Ahead</span></a></th>
     </tr>
   </tbody>
-</body>
 </table>
 </html>
