--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <title>« Articles » The Other Fruit®</title>
 
 </head>
+<body>
 <table class="table table-striped">
   <thead>
     <tr>
       <th scope="col"><span style="color:rgba(10, 182, 235, 0.75);"><h1 style="text-align:center;">Articles</h1></span></th>
-      <!-- <th scope="col">Visit on</th> -->
     </tr>
   </thead>
   <tbody>
@@ -22,5 +22,6 @@
       <th scope="row"><a href="https://theotherfruit.com/thinking-ahead/"><span style="color:rgba(1, 169, 134, 0.75);">Thinking Ahead</span></a></th>
     </tr>
   </tbody>
+</body>
 </table>
 </html>
