--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <html>
-<head>
-    <!-- <script>
-	   window.location.href='TOF-Articles/thinking-ahead'
-    </script> -->
-
-  <title>« Articles » The Other Fruit®</title>
-
-</head>
-<body>
+  <body>
 <table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col"><span style="color:rgba(10, 169, 134, 0.75);"><h1 style="text-align:center;">Articles</h1></span></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row"><a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);"><h2>Private Valuation</h2></span></a></th>
-    </tr>
-    <tr>
-      <th scope="row"><a href="https://theotherfruit.com/thinking-ahead/"><span style="color:rgba(1, 169, 134, 0.75);"><h2>Thinking Ahead</h2></span></a></th>
-    </tr>
-  </tbody>
-</body>
-</table>
-</html>
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
+  </body>
+  </html>
