--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col"><span style="color:rgba(10, 169, 134, 0.75);"><h1 style="text-align:center;">Articles</h1></span></th>
+      <th scope="col"><span style="color:rgba(10, 169, 134, 0.75);"><h2 style="text-align:center;">Articles</h2></span></th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th scope="row"><a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);"><h2>Private Valuation</h2></span></a></th>
+      <th scope="row"><a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">Private Valuation</h3></span></a></th>
     </tr>
     <tr>
-      <th scope="row"><a href="https://theotherfruit.com/thinking-ahead/"><span style="color:rgba(1, 169, 134, 0.75);"><h2>Thinking Ahead</h2></span></a></th>
+      <th scope="row"><a href="https://theotherfruit.com/thinking-ahead/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">Thinking Ahead</h3></span></a></th>
     </tr>
   </tbody>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
