--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <table class="table table-striped">
-  <thead>
+  <thead><br><br><br>
     <tr>
       <th scope="col"><span style="color:rgba(10, 169, 134, 0.75);"><h2 style="text-align:center;">Articles</h2></span></th>
     </tr>
