--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 <table class="table table-striped">
-  <thead><br><br><br>
+  <thead><br><br><br><br><br>
     <tr>
-      <th scope="col"><span style="color:rgba(10, 169, 134, 0.75);"><h2 style="text-align:center;">Articles</h2></span></th>
+      <th scope="col"><span style="color:rgba(10, 169, 134, 0.75);"><h2 style="text-align:center;">Articles</h2></span></th><br>
     </tr>
   </thead>
   <tbody>
