--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <table class="table table-striped">
   <thead><br><br><br><br><br>
     <tr>
-      <th scope="col"><span style="color:rgba(10, 169, 134, 0.75);"><h2 style="text-align:center;">Articles</h2></span></th><br>
+      <th scope="col"><span style="color:rgba(10, 169, 134, 0.75);"><h2 style="text-align:center;">Articles</h2></span></th>
     </tr>
-  </thead>
+  </thead><br>
   <tbody>
     <tr>
       <th scope="row"><a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">Private Valuation</h3></span></a></th>
