--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <tr>
       <th scope="row"><a href="https://theotherfruit.com/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">For More Articles Visit us on <span class="x-anchor-text"><span class="x-anchor-text-primary">TOF</span></span> <i class="x-anchor-sub-indicator" aria-hidden="true" data-x-icon-s="&#xf309;"></i> </span>        <a</h3></span></a></th>
     </tr>
+    <tr>
+      <th scope="row"><a href="https://theotherfruit.com/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">For More Articles Click here for our Site</h3></span></a></th>
+    </tr>
   </tbody>
 	
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
