--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row"><a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">Private Valuation</h3></span></a></th>
-    </tr>
-    <tr>
       <th scope="row"><a href="https://theotherfruit.com/thinking-ahead/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">Thinking Ahead</h3></span></a></th>
     </tr>
     <tr>
-      <th scope="row"><a href="https://theotherfruit.com/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">For More Articles Visit us on <span class="x-anchor-text"><span class="x-anchor-text-primary">TOF</span></span> <i class="x-anchor-sub-indicator" aria-hidden="true" data-x-icon-s="&#xf309;"></i> </span>        <a</h3></span></a></th>
+      <th scope="row"><a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">Private Valuation</h3></span></a></th>
     </tr>
     <tr>
-      <th scope="row"><a href="https://theotherfruit.com/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">For More Articles Click here for our Site</h3></span></a></th>
+      <th scope="row"><a href="https://theotherfruit.com/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">For More Articles...</h3></span></a></th>
     </tr>
   </tbody>
 	
