--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row"><a href="https://theotherfruit.com/thinking-ahead/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">Thinking Ahead</h3></span></a></th>
+      <th scope="row"><a href="thinking-ahead/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">Thinking Ahead</h3></span></a></th>
     </tr>
     <tr>
       <th scope="row"><a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">Private Valuation</h3></span></a></th>
@@ -23,9 +23,9 @@
       <th scope="row"><a href="https://theotherfruit.com/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">For More Articles...</h3></span></a></th>
     </tr>
   </tbody>
-  <script>
+  <-- <script>
 	   window.location.href='/thinking-ahead/thinking-ahead.html'
-  </script>
+  </script> -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
