--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row"><a href="thinking-ahead/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">Thinking Ahead</h3></span></a></th>
+      <th scope="row"><a href="thinking-ahead/thinking-ahead.html/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">Thinking Ahead</h3></span></a></th>
     </tr>
     <tr>
       <th scope="row"><a href="https://theotherfruit.com/private-valuation/"><span style="color:rgba(1, 169, 134, 0.75);"><h3 style="text-align: center;">Private Valuation</h3></span></a></th>
