--- a/private-valuation/index.html
+++ b/private-valuation/index.html
@@ -378,14 +378,13 @@ window.onload = function(){disableSelection(document.body);};
 <footer class="x-colophon" role="contentinfo">
 <div class="e5521-1 x-bar x-bar-footer x-bar-h x-bar-relative x-bar-outer-spacers" data-x-bar="{&quot;id&quot;:&quot;e5521-1&quot;,&quot;region&quot;:&quot;footer&quot;,&quot;height&quot;:&quot;auto&quot;}">
 <div class="e5521-1 x-bar-content">
-<div class="e5521-2 x-bar-container">
-<!-- <a class="e5521-3 x-anchor x-anchor-button" tabindex="0" href="/cdn-cgi/l/email-protection#33505c5d505a5641545673475b565c475b56415541465a471d505c5e0c404651595650470e7b565f5f5c1d1d1d"> -->
+<!-- <div class="e5521-2 x-bar-container">
 <span class="x-anchor-content">
 <span class="x-graphic" aria-hidden="true">
 <i class="x-icon x-graphic-icon x-graphic-primary" aria-hidden="true" data-x-icon-l="&#xf0e0;"></i>
 <i class="x-icon x-graphic-icon x-graphic-secondary" aria-hidden="true" data-x-icon-l="&#xf658;"></i>
 </span> </span>
-</a>
+</a> -->
 </div>
 <div class="e5521-5 x-text">
 <p><a href="https://theotherfruit.com"><span style="color:rgba(1, 169, 134, 0.75);">TOF</span></a></p></div>
