--- a/private-valuation/index.html
+++ b/private-valuation/index.html
@@ -378,8 +378,8 @@ window.onload = function(){disableSelection(document.body);};
 <footer class="x-colophon" role="contentinfo">
 <div class="e5521-1 x-bar x-bar-footer x-bar-h x-bar-relative x-bar-outer-spacers" data-x-bar="{&quot;id&quot;:&quot;e5521-1&quot;,&quot;region&quot;:&quot;footer&quot;,&quot;height&quot;:&quot;auto&quot;}">
 <div class="e5521-1 x-bar-content">
-<!-- <div class="e5521-2 x-bar-container">
-<span class="x-anchor-content">
+<div class="e5521-2 x-bar-container">
+<!-- <span class="x-anchor-content">
 <span class="x-graphic" aria-hidden="true">
 <i class="x-icon x-graphic-icon x-graphic-primary" aria-hidden="true" data-x-icon-l="&#xf0e0;"></i>
 <i class="x-icon x-graphic-icon x-graphic-secondary" aria-hidden="true" data-x-icon-l="&#xf658;"></i>
