--- a/private-valuation/index.html
+++ b/private-valuation/index.html
@@ -386,6 +386,7 @@ window.onload = function(){disableSelection(document.body);};
 </span> </span>
 </a> -->
 </div>
+<div class="e5521-4 x-bar-container">
 <div class="e5521-5 x-text">
 <p><a href="https://theotherfruit.com"><span style="color:rgba(1, 169, 134, 0.75);">TOF</span></a></p></div>
 </div>
